--- a/src/NorthWind.BlazingPizza.GetSpecials.WebApi/Dockerfile
+++ b/src/NorthWind.BlazingPizza.GetSpecials.WebApi/Dockerfile
@@ -4,8 +4,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
+USER root
+RUN chown -R app:app /app
+user app
 EXPOSE 8080
-
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
